<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/icon_login_width"
        android:layout_height="@dimen/icon_login_height"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/txt_user"
        style="@style/EditTextLoginStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="32dp"
        android:background="@drawable/back_edit_text"
        android:drawableStart="@drawable/ico_usr"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/txt_pwd"
        style="@style/EditTextLoginStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/login_text_height"
        android:layout_marginTop="8dp"
        android:background="@drawable/back_edit_text"
        android:drawableStart="@drawable/ico_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user" />

    <Button
        android:id="@+id/button"
        style="@style/btnLoginStyle"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_gray"
        android:onClick="btnLoginAction"
        android:text="@string/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pwd" />

    <TextView
        android:id="@+id/txt_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_condensedregular"
        android:text="TextView"
        android:textColor="@color/base"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_condensedregular"
        android:onClick="btnRecuperarAction"
        android:text="@string/btn_recuperar_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</android.support.constraint.ConstraintLayout>