<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".TareasDetalleActivity">

    <TextView
        android:id="@+id/txt_tarea"
        style="@style/TextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_black"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        android:textColor="@color/base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tarea" />

    <Button
        android:id="@+id/btn_cargar_archivo"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="btnAttachFileAction"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/cargar_archivo"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <Button
        android:id="@+id/btn_descargar_archivo"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:onClick="btnViewFileAction"
        android:paddingEnd="8dp"
        android:text="@string/descargar_archivo"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <EditText
        android:id="@+id/txt_texto_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <Button
        android:id="@+id/btn_actualizar_tarea"
        style="@style/btnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="setBtnActualizarTextoAction"
        android:paddingEnd="8dp"
        android:text="@string/actualizar"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/txt_texto_tarea"
        app:layout_constraintTop_toBottomOf="@+id/txt_fecha" />

    <View
        android:id="@+id/divider8"
        android:layout_width="395dp"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/img_line_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_actualizar_tarea" />

    <ListView
        android:id="@+id/list_comentarios_tarea"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:divider="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <View
        android:id="@+id/divider2"
        android:layout_width="395dp"
        android:layout_height="2dp"
        android:background="@drawable/img_line_colors"
        app:layout_constraintBottom_toTopOf="@+id/layout_addComentario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout_addComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/txt_add_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/back_edit_text"
            android:hint="@string/add_comentario" />

        <ImageButton
            android:id="@+id/btn_add_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:onClick="btnAddCommentAction"
            android:paddingEnd="16dp"
            android:src="@drawable/ico_send" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>