<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocalidadesActivity">


    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/img_line_colors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/filtros_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/img_line_separator"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9">

        <Button
            android:id="@+id/btn_filtrar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:drawableStart="@drawable/ico_filter"
            android:padding="16dp"
            android:text="@string/filtrar" />

        <Button
            android:id="@+id/btn_ordenar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white"
            android:drawableStart="@drawable/ico_sort"
            android:padding="16dp"
            android:text="@string/ordenar" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:drawableTop="@drawable/ico_search"
            android:paddingTop="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider9">

        <EditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/back_edit_text"
            android:hint="@string/buscar" />

        <ImageButton
            android:id="@+id/btn_close_search"
            android:layout_width="40dp"
            android:layout_height="15dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/close" />

    </LinearLayout>

    <View
        android:id="@+id/divider10"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/img_line_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtros_header"/>


    <ListView
        android:id="@+id/list_localidades"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:divider="@drawable/img_line_separator"
        android:dividerHeight="7dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider10"
        tools:listheader="@layout/support_simple_spinner_dropdown_item" />

    <ListView
        android:id="@+id/list_filtros"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:dividerHeight="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtros_header" />
</android.support.constraint.ConstraintLayout>