<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


                <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/divider2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:context=".EstatusLocalidadFragment">

                        <TextView
                            android:id="@+id/textView5"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/Beneficiario"
                            android:textColor="@color/green_dark" />

                        <TextView
                            android:id="@+id/txt_beneficiario"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="TextView"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/textView8"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/arrendador"
                            android:textColor="@color/green_dark" />

                        <TextView
                            android:id="@+id/txt_arrendador"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="TextView"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/textView10"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/domicilio"
                            android:textColor="@color/green_dark" />

                        <TextView
                            android:id="@+id/txt_domicilio"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="TextView"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/textView12"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="@string/antecedentes"
                            android:textColor="@color/green_dark" />

                        <TextView
                            android:id="@+id/txt_antecedentes"
                            style="@style/TextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="16dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:text="TextView"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider6"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider" />


                </LinearLayout>
        </ScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="395dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/img_line_colors"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>